Fix: Restore footer spacing and get-in-touch line

--- a/src/client/stylesheets/components/_defra-footer.scss
+++ b/src/client/stylesheets/components/_defra-footer.scss
@@ -7,8 +7,22 @@
   background-color: $govuk-light-grey;
 }
 
+.defra-footer__meta {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: flex-start;
+  gap: 15px;
+}
+
+.defra-footer__meta-item {
+  flex-grow: 1;
+  flex-basis: 100%;
+  text-align: left;
+}
+
 .defra-footer__inline-list {
-  margin: 0 0 20px;
+  margin: 0 0 15px;
   padding: 0;
   list-style: none;
 }
@@ -55,15 +69,10 @@
 }
 
 .defra-footer__licence-description {
-  margin: 0 0 20px;
   font-family: Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   line-height: 1.25;
   color: $govuk-black;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
